--- a/index.html
+++ b/index.html
@@ -1,11 +1,84 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>GYM Management System</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header class="main-header">
+        <div class="header-content">
+            <a href="index.html"><h1>GYM::ADMIN</h1></a>
+            <nav class="main-nav">
+                <button class="mobile-menu-toggle" aria-label="Открыть меню">☰</button>
+                <ul class="nav-list">
+                    <li><a href="#home" class="active">Главная</a></li>
+                    <li><a href="#about">Помощь</a></li>
+                    <li><a href="#booking">Запись</a></li>
+                    <li><a href="#auth">Вход/Регистрация</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main class="content-grid">
+        <section class="news-section">
+            <h2 class="section-title">Последние обновления</h2>
+            <div class="news-grid">
+            </div>
+        </section>
+    </main>
+
+    <footer class="main-footer">
+        <div class="footer-grid">
+            <div class="footer-section">
+                <h3>Контакты</h3>
+                <p>Телефон: +7 (999) 123-45-67</p>
+                <p>Email: admin@gym-system.ru</p>
+            </div>
+        </div>
+    </footer>
+    <div id="authModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <div id="loginForm">
+                <h2>Вход в систему</h2>
+                <form id="loginFormData">
+                    <div class="form-group">
+                        <label for="loginEmail">Email:</label>
+                        <input type="email" id="loginEmail" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="loginPassword">Пароль:</label>
+                        <input type="password" id="loginPassword" required>
+                    </div>
+                    <button type="submit" class="btn-primary">Войти</button>
+                </form>
+                <p class="auth-switch">Нет аккаунта? <a href="#" id="switchToRegister">Зарегистрироваться</a></p>
+            </div>
     
+            <div id="registerForm" class="hidden">
+                <h2>Регистрация</h2>
+                <form id="registerFormData">
+                    <div class="form-group">
+                        <label for="registerName">ФИО:</label>
+                        <input type="text" id="registerName" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="registerEmail">Email:</label>
+                        <input type="email" id="registerEmail" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="registerPassword">Пароль:</label>
+                        <input type="password" id="registerPassword" required>
+                    </div>
+                    <button type="submit" class="btn-primary">Зарегистрироваться</button>
+                </form>
+                <p class="auth-switch">Уже есть аккаунт? <a href="#" id="switchToLogin">Войти</a></p>
+            </div>
+        </div>
+    </div>
+    <script src="js.js"></script>
 </body>
 </html>
